--- a/blocks/header/__languages/header__languages.css
+++ b/blocks/header/__languages/header__languages.css
@@ -1,4 +1,17 @@
 .header__languages {
-    font-size: calc(18px + 6 * ((100vw - 320px) / 448));
-    line-height: 111.1111111111%;
-  }
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style-type: none;
+    font-size: 24px;
+    line-height: 28px;
+    color: white;
+    gap: 0 18px;
+}
+
+@media (max-width: 768px) {
+    .header__languages {
+        font-size: calc(18px + 6 * ((100vw - 320px) / 448));
+        line-height: 111.1111111111%;
+    }
+}
