--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,7 +1,9 @@
 .body {
     font-family: "Inter Regular", "sans-serif";
-    color: white;
+    color: #fff;
     max-width: 1280px;
     background-color: #2a2c2f;
     margin: 0 auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
