--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 /*Vendor*/
 @import url('../vendor/normalize.css');
-@import url('../vendor/fonts');
+@import url('../vendor/fonts/fonts.css');
 
 
 /*Page*/
