--- a/pages/index.css
+++ b/pages/index.css
@@ -22,7 +22,7 @@
 @import url('../blocks/header/__logo/header__logo.css');
 /*Lead*/
 @import url('../blocks/lead/lead.css');
-@import url('../blocks/lead/__title');
+@import url('../blocks/lead/__title/lead__title.css');
 @import url('../blocks/lead/__subtitle/lead__subtitle.css');
 @import url('../blocks/lead/__image/lead__image.css');
 @import url('../blocks/lead/__caption/lead__caption.css');
