--- a/blocks/wrapper-outer/wrapper-outer.css
+++ b/blocks/wrapper-outer/wrapper-outer.css
@@ -1,6 +1,7 @@
 .wrapper-outer {
-    padding-right: calc(16px + 8 * ((100vw - 320px) / 448));
-    padding-left: calc(16px + 8 * ((100vw - 320px) / 448));
+    max-width: 984px;
+    margin: 0 auto;
+    padding: 0 48px;
 }
 
 @media (max-width: 1024px) {
