--- a/pages/index.css
+++ b/pages/index.css
@@ -8,22 +8,36 @@
 
 /*Wrapper-outer*/
 @import url('../blocks/wrapper-outer/wrapper-outer.css');
-@import url('../blocks/wrapper-outer/__cover/wrapper-outer__cover.css');
-@import url('../blocks/wrapper-outer/__footer/wrapper-outer__footer.css');
+@import url('../blocks/wrapper-outer/_wide/wrapper-outer_wide.css');
 @import url('../blocks/wrapper-outer/__header/wrapper-outer__header.css');
-@import url('../blocks/wrapper-outer/__intro/wrapper-outer__intro.css');
 @import url('../blocks/wrapper-outer/__lead/wrapper-outer__lead.css');
+@import url('../blocks/wrapper-outer/__intro/wrapper-outer__intro.css');
 @import url('../blocks/wrapper-outer/__photo-grid/wrapper-outer__photo-grid.css');
 @import url('../blocks/wrapper-outer/__places/wrapper-outer__places.css');
+@import url('../blocks/wrapper-outer/__cover/wrapper-outer__cover.css');
+@import url('../blocks/wrapper-outer/__footer/wrapper-outer__footer.css');
 /*Header*/
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
 @import url('../blocks/header/__languages/header__languages.css');
 @import url('../blocks/header/__languages-link/_active/header__languages-link_active.css');
-@import url('../blocks/header/__logo/header__logo.css');
 /*Lead*/
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/lead/__title/lead__title.css');
 @import url('../blocks/lead/__subtitle/lead__subtitle.css');
 @import url('../blocks/lead/__image/lead__image.css');
 @import url('../blocks/lead/__caption/lead__caption.css');
+/*Intro*/
+@import url('../blocks/intro/intro.css');
+@import url('../blocks/intro/__title/intro__title.css');
+@import url('../blocks/intro/__text/intro__text.css');
+@import url('../blocks/intro/__list/intro__list.css');
+@import url('../blocks/intro/__list-number/intro__list-number.css');
+/*Intro*/
+@import url('../blocks/photo-grid/__container/photo-grid__container.css');
+@import url('../blocks/photo-grid/__image/photo-grid__image.css');
+
+
+
+
 
