--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 /*Wrapper-outer*/
 @import url('../blocks/wrapper-outer/wrapper-outer.css');
 @import url('../blocks/wrapper-outer/_wide/wrapper-outer_wide.css');
+@import url('../blocks/wrapper-outer/_padding/wrapper-outer_padding_zero.css');
 @import url('../blocks/wrapper-outer/__header/wrapper-outer__header.css');
 @import url('../blocks/wrapper-outer/__lead/wrapper-outer__lead.css');
 @import url('../blocks/wrapper-outer/__intro/wrapper-outer__intro.css');
@@ -36,6 +37,15 @@
 /*Intro*/
 @import url('../blocks/photo-grid/__container/photo-grid__container.css');
 @import url('../blocks/photo-grid/__image/photo-grid__image.css');
+/*Intro*/
+@import url('../blocks/places/__items/places__items.css');
+@import url('../blocks/places/__item/places__item.css');
+@import url('../blocks/places/__title/places__title.css');
+@import url('../blocks/places/__image/places__image.css');
+@import url('../blocks/places/__website/places__website.css');
+@import url('../blocks/places/__url-heading/places__url-heading.css');
+@import url('../blocks/places/__link/places__link.css');
+@import url('../blocks/places/__paragraph/places__paragraph.css');
 
 
 
