--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,8 @@
 .cover__subtitle {
     margin: 0;
     padding: 0;
-    font-family: "Inter Regular", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     font-size: 18px;
     line-height: 122.2222222222%;
     max-width: 360px;
