--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,8 @@
 .cover__title {
     margin: 0 0 32px;
     padding: 0;
-    font-family: "Inter Black", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 900;
     font-size: 72px;
     line-height: 1.055;
     max-width: 560px;
