--- a/blocks/cover/_theme/cover_theme_position.css
+++ b/blocks/cover/_theme/cover_theme_position.css
@@ -1,10 +1,10 @@
-.wrapper-outer__cover {
+.cover_theme_position {
     margin-top: 92px;
 }
 
 @media (max-width: 768px) {
 
-    .wrapper-outer__cover {
+    .cover_theme_position {
         margin-top: calc(66px + 24 * ((100vw - 320px) / 448));
     }
 }
