--- a/blocks/intro/__list-number/intro__list-number.css
+++ b/blocks/intro/__list-number/intro__list-number.css
@@ -1,5 +1,6 @@
 .intro__list-number {
-  font-family: "Inter Regular", "sans-serif";
+  font-family: "Inter", Arial, "sans-serif";
+  font-weight: 400;
   font-size: 12px;
   line-height: 18px;
 }
