--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,8 @@
 .intro__text {
+  max-width: 690px;
   margin: 40px 0 0;
-  font-family: "Inter Regular", "sans-serif";
+  font-family: "Inter", Arial, "sans-serif";
+  font-weight: 400;
   font-size: 16px;
   line-height: 163%;
 }
