--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,11 @@
 .lead__caption {
     padding: 0;
     margin: 8px 0 0;
-    font-family: "Inter Regular", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     font-size: 10px;
     line-height: 140%;
-    letter-spacing: 1.5px;
+    letter-spacing: 2px;
 }
 
 @media (max-width: 768px) {
