--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,11 @@
 .lead {
-  margin: 0;
+  max-width: 984px;
+  margin: 0 auto;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
 }
 
