--- a/blocks/page/__lead/page__lead.css
+++ b/blocks/page/__lead/page__lead.css
@@ -1,18 +1,17 @@
-.wrapper-outer {
-    max-width: 984px;
-    margin: 0 auto;
-    padding: 0 48px;
+.page__lead {
+    padding-right: 48px;
+    padding-left: 48px;
 }
 
 @media (max-width: 1024px) {
-    .wrapper-outer {
+    .page__lead {
         padding-right: calc(24px + 24 * ((100vw - 768px) / 256));
         padding-left: calc(24px + 24 * ((100vw - 768px) / 256));
     }
 }
 
 @media (max-width: 768px) {
-    .wrapper-outer {
+    .page__lead {
         padding-right: calc(16px + 8 * ((100vw - 320px) / 448));
         padding-left: calc(16px + 8 * ((100vw - 320px) / 448));
     }
