--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
-.body {
-    font-family: "Inter Regular", "sans-serif";
+.page {
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     color: #fff;
     max-width: 1280px;
     background-color: #2a2c2f;
