--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -4,3 +4,13 @@
     object-fit: cover;
 }
 
+@media (max-width: 320px) {
+    .places__image {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        right: 50%;
+        margin-left: -50vw;
+        margin-right: -50vw;
+    }
+}
