--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -1,5 +1,6 @@
 .places__link {
-    font-family: "Inter Regular", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.222;
     color: #fff;
