--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,5 +1,6 @@
 .places__paragraph {
-    font-family: "Inter Regular", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     font-size: 18px;
     line-height: 163%;
     margin: 0;
@@ -17,5 +18,9 @@
 @media (max-width: 320px) {
     .places__paragraph {
         font-size: 16px;
+    }
+
+    .places__paragraph:not(:last-of-type) {
+        margin-bottom: 25px;
     }
 }
