--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,7 +1,8 @@
 .places__url-heading {
     padding: 0;
     margin: 0;
-    font-family: "Inter Regular", "sans-serif";
+    font-family: "Inter", Arial, "sans-serif";
+    font-weight: 400;
     font-size: 12px;
     line-height: 1;
     letter-spacing: 0.1666em;
