--- a/blocks/header/_theme/header_theme_position.css
+++ b/blocks/header/_theme/header_theme_position.css
@@ -1,9 +1,20 @@
 .header_theme_position {
     margin-top: 28px;
+    padding: 0 48px;
 }
 
+@media (max-width: 1024px) {
+    .header_theme_position {
+        padding-right: calc(24px + 24 * ((100vw - 768px) / 256));
+        padding-left: calc(24px + 24 * ((100vw - 768px) / 256));
+    }
+}
 
 @media (max-width: 768px) {
+    .header_theme_position {
+        padding-right: calc(16px + 8 * ((100vw - 320px) / 448));
+        padding-left: calc(16px + 8 * ((100vw - 320px) / 448));
+    }
     .header_theme_position {
         margin-top: calc(16px + 12 * ((100vw - 320px) / 448));
     }
