--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,5 +4,5 @@
   font-family: "Inter", Arial, "sans-serif";
   font-weight: 400;
   font-size: 16px;
-  line-height: 163%;
+  line-height: 1.624;
 }
