--- a/blocks/intro/_theme_position/intro_theme_position.css
+++ b/blocks/intro/_theme_position/intro_theme_position.css
@@ -1,11 +1,11 @@
 .intro_theme_position {
     margin-top: 92px;
-    padding-left: 100px;
+    padding-left: 148px;
 }
 
 @media (max-width: 1280px) {
     .intro_theme_position {
-        padding-left: calc(0px + 100 * ((100vw - 1024px) / 259));
+        padding-left: calc(48px + 100 * ((100vw - 1024px) / 259));
 
     }
 }
@@ -13,12 +13,18 @@
 @media (max-width: 1024px) {
     .intro_theme_position {
         margin-top: calc(88px + 4 * ((100vw - 768px) / 256));
+        padding-left: calc(24px + 24 * ((100vw - 768px) / 256));
+        padding-right: calc(24px + 24 * ((100vw - 768px) / 256));
+
     }
 }
 
 @media (max-width: 768px) {
     .intro_theme_position {
         margin-top: calc(64px + 24 * ((100vw - 320px) / 448));
+        padding-right: calc(16px + 8 * ((100vw - 320px) / 448));
+        padding-left: calc(16px + 8 * ((100vw - 320px) / 448));
+
 
     }
 }
