--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,7 +5,7 @@
 
 @media (max-width: 768px) {
     .lead__image {
-        min-width: 100vw;
+        min-width: 100%;
         max-height: 100%;
     }
 }
