--- a/blocks/photo-grid/_theme/photo-grid_theme_position.css
+++ b/blocks/photo-grid/_theme/photo-grid_theme_position.css
@@ -1,15 +1,21 @@
 .photo-grid_theme_position {
     margin-top: 92px;
+    padding: 0 48px;
 }
 
 @media (max-width: 1024px) {
     .photo-grid_theme_position {
         margin-top: calc(88px + 4 * ((100vw - 768px) / 256));
+        padding-right: calc(24px + 24 * ((100vw - 768px) / 256));
+        padding-left: calc(24px + 24 * ((100vw - 768px) / 256));
+
     }
 }
 
 @media (max-width: 768px) {
     .photo-grid_theme_position {
         margin-top: calc(64px + 24 * ((100vw - 320px) / 448));
+        padding-right: calc(16px + 8 * ((100vw - 320px) / 448));
+        padding-left: calc(16px + 8 * ((100vw - 320px) / 448));
     }
 }
