--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -15,6 +15,13 @@
     }
 }
 
+@media (max-width: 768px) {
+    .places__paragraph {
+        padding-right: calc(16px - 16 * ((100vw - 320px) / 448));
+        padding-left: calc(16px - 16 * ((100vw - 320px) / 448))
+    }
+}
+
 @media (max-width: 320px) {
     .places__paragraph {
         font-size: 16px;
