--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -18,6 +18,9 @@
     .places__title {
         font-size: calc(32px + 10 * ((100vw - 320px) / 448));
         line-height: calc(35px + 11 * ((100vw - 320px) / 448));
+
+        padding-right: calc(16px - 16 * ((100vw - 320px) / 448));
+        padding-left: calc(16px - 16 * ((100vw - 320px) / 448));
     }
 }
 /*
