--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -6,6 +6,15 @@
     /*justify-content: space-between;*/
 }
 
+@media (max-width: 768px) {
+    .places__website {
+        padding-right: calc(16px - 16 * ((100vw - 320px) / 448));
+        padding-left: calc(16px - 16 * ((100vw - 320px) / 448))
+
+
+    }
+}
+
 /*
 @media (max-width: 320px) {
     .places__website {
