--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -9,7 +9,7 @@
 @media (max-width: 768px) {
     .places__website {
         padding-right: calc(16px - 16 * ((100vw - 320px) / 448));
-        padding-left: calc(16px - 16 * ((100vw - 320px) / 448))
+        padding-left: calc(16px - 16 * ((100vw - 320px) / 448));
 
 
     }
