--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,9 @@
   max-height: inherit;
   object-fit: cover;
 }
+
+@media (max-width: 768px) {
+    .header__logo {
+        max-height: calc(42px + 10 * ((100vw - 320px) / 448));
+    }
+}
