--- a/blocks/photo-grid/__container/photo-grid__container.css
+++ b/blocks/photo-grid/__container/photo-grid__container.css
@@ -4,29 +4,25 @@
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
-    grid-template-rows: repeat(auto-fill, 213px);
-    grid-auto-rows: 213px;
+
     grid-gap: 16px;
 }
 
 @media (max-width: 1024px) {
     .photo-grid__container {
-        grid-template-rows: repeat(auto-fill, 225px);
-        grid-auto-rows: 225px;
+
         grid-gap: 14px;
     }
 }
 @media (max-width: 768px) {
     .photo-grid__container {
-        grid-template-rows: repeat(auto-fill, 264px);
-        grid-auto-rows: 264px;
+
         grid-gap: 16px;
     }
 }
 @media (max-width: 320px) {
     .photo-grid__container {
-        grid-template-rows: repeat(auto-fill, 216px);
-        grid-auto-rows: 216px;
+        max-width: 288px;
         grid-gap: 12px;
     }
 }
