--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -5,4 +5,50 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 740px;
+    height: 100%;
+    cursor: pointer;
+    /*background-image: url("../../../images/cover_image-1.jpg");*/
+    /*background-size: cover;*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: center center;*/
+    position: relative;
+    background: center / cover no-repeat url("../../../images/cover_image-1.jpg");
+}
+
+.cover__link::after {
+    content: "";
+    background: rgba(42, 44, 47, 0.3);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    transition: ease-in-out 0.5s;
+}
+.cover__link:hover::after {
+    background: rgba(42, 44, 47, 0.8);
+}
+
+@media (max-width: 1280px) {
+    .cover__link {
+        min-height: calc(640px + 100 * ((100vw - 1024px) / 256));
+    }
+}
+
+@media (max-width: 1024px) {
+    .cover__link {
+        min-height: calc(480px + 160 * ((100vw - 768px) / 256));
+        box-sizing: border-box;
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .cover__link {
+        min-height: calc(200px + 280 * ((100vw - 320px) / 448));
+    }
 }
