--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,7 +5,8 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 140%;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
