--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -4,7 +4,10 @@
     font-size: 18px;
     line-height: 1.222;
     color: #fff;
+    width: fit-content;
+
 }
+
 .places__link:hover {
     cursor: pointer;
 }
